--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,6 +1,6 @@
-title: Urban Ltd
-description: Bringing the best experiences to the web for you and your clients.
-contact_email_address: contact@example.com
-contact_phone_number: (03) 123 4567
-address: 123 Example Street, Gooseburb, 9876, Ducktown, New Zealand
-postal_address: PO Box 123, Ducktown, New Zealand
+title: Contributors
+description: 张子健
+contact_email_address: bdfztechnicolor@163.com
+contact_phone_number: 
+address: 北楼204-2
+postal_address: 
