--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,30 +1,30 @@
-- title: Pages
+- title: 页面
   links:
-    - name: Home
+    - name: 主页
       link: /
-    - name: Portfolio
+    - name: 项目
       link: /portfolio/
-    - name: Blog
+    - name: 消息
       link: /blog/
-    - name: About
+    - name: 我们的社员
       link: /about/
-    - name: Contact
+    - name: 联系我们
       link: /contact/
-- title: Social
+- title: 友情链接
   links:
-    - name: Facebook
-      link: https://facebook.com/cloudcannon/
+    - name: 北大附中
+      link: http://www.pkuschool.edu.cn/
       social_icon: Facebook
       new_window: true
-    - name: Twitter
-      link: https://twitter.com/cloudcannon/
+    - name: subIT
+      link: https://pkuschool.github.io/SubIT/
       social_icon: Twitter
       new_window: true
-    - name: Instagram
-      link: https://instagram.com/
+    - name: 语雀
+      link: https://www.yuque.com/
       social_icon: Instagram
       new_window: true
-    - name: LinkedIn
-      link: https://nz.linkedin.com/company/cloud-cannon
+    - name: Github
+      link: https://github.com/bdfztechnicolor
       social_icon: LinkedIn
       new_window: true
