--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -8,8 +8,8 @@
       link: /blog/
     - name: 我们的社员
       link: /about/
-    - name: 联系我们
-      link: /contact/
+#    - name: 联系我们
+#      link: /contact/
 - title: 友情链接
   links:
     - name: 北大附中
